# my_toolbox

./: .gitignore  README.md  developmentscript.py  diff.html  load_epygram_env  load_kili_env  pyproject.toml  temp_savepoint.py
.spyproject/config/: workspace.ini
.spyproject/config/backups/: workspace.ini.bak
bashtools/: auth_to_atos.sh  rsync_to_atos  secrets.yml
cli_collectors/: call_epy_what.sh
scripts/: Namelist.py  argsparser_demo.py  epy_what.py  telecom_tools.py
setup_env/: atos.sh
toolbox/: __init__.py  __main__.py  diff_namelists.py  epy_plot.py  epy_what.py  namelist.py  read_namelist.py  string_formatters.py  test_paths.py
toolbox/epy_modules/: io_methods.py
toolbox/namelist_interpret/: io_namelist_explainer.py  namelist_def.json
